# rust-basic-api

./: Cargo.toml  Dockerfile
src/: api.rs  db.rs  main.rs  model.rs  openapi.rs  telemetry.rs  upload.rs
