[package]
name = "nuage-robo-api"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"

[dependencies]
axum = { version = "0.7", features = ["http2", "macros", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
hyper = { version = "1", features = ["http2"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "compression-br", "request-id"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"

# Postgres (fast, low overhead)
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
deadpool-postgres = { version = "0.12", features = ["rt_tokio_1"] }
tokio-util = "0.7"
csv = "1"

# OpenAPI + Swagger UI
utoipa = { version = "4", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
